--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,7 @@ button:focus-visible {
   padding: 1.5rem 2rem;
   z-index: 100;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 }
 
